-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
Query Integration
-
Fully Compatible
-
ALL
-
v9.0
-
None
-
None
-
None
-
None
-
None
-
None
-
None
Bump extension versions, which contain the following fixes:
- properly pass searchSequenceToken to shards during PlanShardedSearch
- check for interrupt during PlanShardedSearch
- BSON serialization perf improvements
- is duplicated by
-
SERVER-131492 search mongot-extension serialize() does not rt requiresSearchSequenceToken across pipeline split
-
- Closed
-
- related to
-
SERVER-132068 Complete TODO listed in SERVER-131492
-
- Closed
-