SERVER-131493 Bump mongot and rerank extension version to v2.0.4, with minor bug fixes (#59170)

GitOrigin-RevId: e53e0f3faaa81c82261492ff5a5a971285d0856a